@@ -91,6 +91,8 @@ Features added
   Thanks to Takeshi Komiya.
 * #1344: add :confval:`gettext_enables` to enable extracting 'index' to gettext
   catalog output / applying translation catalog to generated documentation.
+* PR#299: add various options to sphinx-quickstart. Quiet mode option
+  ``--quiet`` will skips wizard mode. Thanks to WAKAYAMA shirou.
 
 Bugs fixed
 ----------
